neue Icons, in sketch "gemacht", aber es gibt einen Bug: im Dark mode funktioniert die menu hintergrundfarbe nicht

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   box-sizing: content-box;
   line-height: 1.5;
   -ms-scroll-snap-type: y mandatory;
-      scroll-snap-type: y mandatory;
+  scroll-snap-type: y mandatory;
 }
 
 h1 {
@@ -74,7 +74,8 @@ ul {
 a {
   text-decoration: none;
 }
-a:hover, a:focus {
+a:hover,
+a:focus {
   text-decoration: underline;
 }
 
@@ -86,19 +87,22 @@ nav {
   width: 100%;
 }
 nav input[type="checkbox"] {
-  -moz-appearance:initial; /* needed to show the image in firefox */
+  -moz-appearance: initial; /* needed to show the image in firefox */
 
   margin: 1rem 2rem 0 0;
   float: right;
   width: 24px;
   height: 24px;
 }
-nav input[type=checkbox]::before {
+nav input[type="checkbox"]::before {
   content: url(pics/menu.png);
-  display:inline-block;
+  display: inline-block;
   background: white;
 }
-nav input[type=checkbox]:checked::before { /*insert close image */ }​
+nav input[type="checkbox"]:checked::before {
+  content: url(pics/menu_open.png);
+}
+​
 
 /* display dropdown when clicked on checkbox */
 [id^="drop"] + ul {
@@ -109,20 +113,19 @@ nav input[type=checkbox]:checked::before { /*insert close image */ }​
 }
 
 /* navigation list */
-  nav ul {
-    display: none;
-    float: right;
-    background-color: #eee;
-    padding: 1em;
-    margin: 0;
-    border-radius: 8px;
-    font-family: sans-serif;
-  }
-  nav ul li {
-    list-style: none;
-    width: 100%;
-  }
-
+nav ul {
+  display: none;
+  float: right;
+  background-color: #eee;
+  padding: 1em;
+  margin: 0;
+  border-radius: 8px;
+  font-family: sans-serif;
+}
+nav ul li {
+  list-style: none;
+  width: 100%;
+}
 
 /* --- table styling --- */
 table,
@@ -133,7 +136,8 @@ td {
 table {
   border-collapse: collapse;
 }
-td,th  {
+td,
+th {
   padding-left: 0.5em;
   padding-right: 0.5em;
   text-align: left;
@@ -195,6 +199,9 @@ table img {
     background: #333;
     color: white;
   }
+  a {
+    color: #9cc0d9;
+  }
   p,
   table,
   h1,
@@ -204,15 +211,17 @@ table img {
   ul {
     background: rgba(51, 51, 51, 0.7);
   }
-  nav input[type=checkbox]::before {
+
+  ​nav ul {
+    background-color: black;
+  }
+  nav input[type="checkbox"]::before {
     content: url(pics/menu_dark.png);
     background: #333;
   }
-  nav ul {
-    background-color: black;
-  }
-  a {
-    color: rgb(156, 192, 217);
+  nav input[type="checkbox"]:checked::before {
+    content: url(pics/menu_dark_open.png);
+    background: #333;
   }
   .red {
     color: #f33;
